frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

  selector:
    app: frontend-deployment
